--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.7",
+    "@reduxjs/toolkit": "^2.8.2",
+    "@shopify/react-native-skia": "^2.2.3",
     "expo": "~53.0.20",
     "expo-blur": "~14.1.5",
     "expo-font": "~13.3.2",
@@ -29,7 +31,8 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-webview": "13.13.5",
-    "react-native-worklets": "^0.4.1"
+    "react-native-worklets": "^0.4.1",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
