--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,8 @@
     "react-native-screens": "~4.11.1",
     "react-native-webview": "13.13.5",
     "react-native-worklets": "^0.4.1",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "@react-native-masked-view/masked-view": "0.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
